<resources>
    <string name="app_name">Complete Fitness</string>

    <!-- Exercise Fragment -->
    <string name="search_exercise">Search</string>

    <!-- Dialog -->
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="confirm">CONFIRM</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="confirm_delete">Delete Item?</string>
    <string name="confirm_remove">Remove Item?</string>

    <!-- Exercise Dialog -->
    <string name="add_exercise">Add New Exercise</string>
    <string name="exercise_dialog_hint">Ex. Bench Press</string>
    <string name="no_muscle_group">No Muscle Group</string>
    <string name="edit_exercise">Edit Exercise</string>


    <!-- Routine Dialog -->
    <string name="routine_dialog_title">Add Routine</string>
    <string name="routine_dialog_hint">Routine Name</string>
    <string name="routine_dialog_edit_title">Edit Routine Name</string>

    <!-- Muscle Group Dialogs -->
    <string name="muscle_group_dialog_title">Add Muscle Group:</string>
    <string name="muscle_group_dialog_hint">Muscle Group</string>
    <string name="muscle_group_edit_title">Edit Muscle Group Name</string>

    <!-- Delete and Edit Menu-->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_remove_exercise">Remove Exercise</string>

    <!-- Intent Strings -->
    <string name="routine_id">ROUTINE_ID</string>
    <string name="intent_value_name">INTENT_VALUE_NAME</string>
    <string name="exercise_id">EXERCISE_ID</string>
    <string name="type_id">TYPE_ID</string>
    <string name="muscle_group_id">MUSCLE_GROUP_ID</string>

    <!-- Fragment add workout set -->
    <string name="add_set">Add</string>
    <string name="clear">CLEAR</string>
    <string name="reps">REPS:</string>
    <string name="weight">WEIGHT:</string>
    <string name="sub_five">-5</string>
    <string name="add_five">+5</string>
    <string name="sub_one">-1</string>
    <string name="add_one">+1</string>
    <string name="zero">0</string>
    <string name="edit">Edit</string>
    <string name="please_enter_one_value">Please enter at least one value</string>

    <!-- Fragment Add Cardio Set -->
    <string name="duration">DURATION:</string>
    <string name="distance">DISTANCE:</string>
    <string name="hour_hint">HR</string>
    <string name="minute_hint">MM</string>
    <string name="second_hint">SS</string>
    <string name="miles_hint">MILES</string>

    <!-- Fragment Graph -->
    <string name="no_data_available">No Data Available</string>

    <!-- Fragment Cardio Graph -->
    <string-array name="cardio_graph_types">
        <item>Distance (mi)</item>
        <item>Time (min)</item>
        <item>Speed (mph)</item>
        <item>Mile Time</item>
    </string-array>

    <!-- Fragment Graph Bodyweight -->
    <string-array name="bodyweight_graph_types">
        <item>Reps</item>
        <item>Time (min)</item>
    </string-array>

    <!-- Formatting -->
    <string name="date_format">dd-MM-yyyy</string>
</resources>
