<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/add_set_padding"
    android:paddingRight="@dimen/add_set_padding"
    android:paddingBottom="@dimen/add_set_padding"
    android:paddingTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/lin_addSet">

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="@dimen/txtsz_addset_labels"
            android:layout_marginTop="3dp"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/accent"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lr_addsublayouts"
            android:layout_marginRight="@dimen/margin_lr_addsublayouts"
            android:layout_gravity="center_horizontal">


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub_five"
                android:id="@+id/btn_subWeight" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/zero"
                android:layout_weight="4"
                android:id="@+id/et_weight"
                android:longClickable="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_five"
                android:id="@+id/addWeight" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_repsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:textSize="@dimen/txtsz_addset_labels"

            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/accent"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lr_addsublayouts"
            android:layout_marginRight="@dimen/margin_lr_addsublayouts">


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_one"
                android:layout_weight="1"
                android:id="@+id/subRep" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/zero"
                android:id="@+id/et_reps"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:clickable="false"
                android:gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_one"
                android:layout_weight="1"
                android:id="@+id/addRep" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:id="@+id/btn_addSet"
                android:layout_margin="3dp" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:id="@+id/btn_clear_values"
                android:text="@string/clear" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_setsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_addSet">
    </ListView>





</RelativeLayout>
