<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/add_set_padding"
    android:paddingRight="@dimen/add_set_padding"
    android:paddingBottom="@dimen/add_set_padding"
    android:paddingTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/lin_addSet">

        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="@dimen/txtsz_addset_labels"
            android:layout_marginTop="3dp"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/accent"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lr_addsublayouts"
            android:layout_marginRight="@dimen/margin_lr_addsublayouts"
            android:layout_gravity="center_horizontal">


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hour_hint"
                android:id="@+id/etHours"
                android:inputType="number"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/minute_hint"
                android:id="@+id/etMiutes"
                android:inputType="number"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/second_hint"
                android:id="@+id/etSeconds"
                android:inputType="number"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:textSize="@dimen/txtsz_addset_labels"
            android:layout_marginTop="3dp"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/accent"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lr_addsublayouts"
            android:layout_marginRight="@dimen/margin_lr_addsublayouts">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/miles_hint"
                android:id="@+id/etMiles"
                android:inputType="numberDecimal"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:id="@+id/btnAddCardioSet"
                android:layout_margin="3dp" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:id="@+id/btnClearCardioValues"
                android:text="@string/clear" />

        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lvCardioSets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_addSet">
    </ListView>





</RelativeLayout>
